# covid19_nsw

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: blog_publish.yml  build_container.yml  publish_notebook.yml  workflow-1.yml  workflow-2.yml
notebooks/: 01-hss-api.ipynb  Bayesian_exponential_model.html  Bayesian_exponential_model.ipynb  Bayesian_exponential_model.jekyll  Poisson_regression.ipynb
src/data/: make_dataset.py
