[tool.poetry]
name = "docker.datascience"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
arviz = "^0.11.2"
bokeh = "^2.3.3"
pandas = "^1.3.0"
pymc3 = "^3.11.2"
python-dotenv = "^0.18.0"
seaborn = "^0.11.1"
typeguard = "^2.12.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
ipykernel = "^6.0.1"
jupyter = "^1.0.0"
jupyterlab = "^3.0.16"
watermark = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
